# screener

./: .gitignore  ADVANCED_MOMENTUM_REPORT.md  AGENTS.md  AUDIT_REPORT.md  Audit_Report.md  CLUADE.md  README.md  STRATEGY_RESEARCH_REPORT.md  autoresearch_strategies.py  justfile  main.py  patch_golden.py  pyproject.toml  qc_results_v2.csv  run_pinescript_strategies.py  scan_today.py  scratch.py  scratch_dividends.py  scratch_splits.py  scratch_splits2.py  screener.yaml  us_universe.txt
.claude/commands/: techofundo.md
.claude/skills/screener-stock-analysis-codebase/: SKILL.md
.codex/skills/techofundo/: SKILL.md
.github/workflows/: ci.yml
.opencode/commands/: techofundo.md
findings/: swing_trading_backtest_2026_05_27.md
screener/: _registry.py  cache.py  cli.py  config.py  conviction.py  criteria.py  display.py  enrich.py  format.py  garp.py  history.py  index_inclusion.py  insiders.py  institutional.py  logging_config.py  minervini.py  pledge.py  providers.py  regime.py  reporting.py  resilience.py  rs_breakout.py  scanner.py  seasonality.py  universes.py  usage.py
screener-rs/: Cargo.toml  README.md
screener-rs/src/: config.rs  data.rs  indicators.rs  lib.rs  main.rs  pine.rs
screener-rs/src/backtester/: engine.rs  metrics.rs  mod.rs  models.rs  portfolio.rs  slippage.rs
screener-rs/src/backtester/optimization/: grid.rs  metrics.rs  mod.rs  monte_carlo.rs
screener-rs/src/providers/: mod.rs  nse.rs  screener_in.rs  tradingview.rs  yahoo.rs
screener-rs/src/screeners/: criteria.rs  engine.rs  garp.rs  insiders.rs  mod.rs  models.rs  operator.rs  pledge.rs  rs_breakout.rs  unusual_volume.rs
screener-rs/src/screeners/criteria/: breakout.rs  cheap_quality.rs  dividend.rs  ema_breakout.rs  intraday_breakout.rs  intraday_momentum.rs  momentum_value.rs  near_52_week_high.rs  obv_trend.rs  quality.rs  undervalued.rs  value.rs  vol_breakout.rs
screener-rs/tests/: parity.rs  parity_test.rs
screener/backtester/: __init__.py  cli_common.py  core.py  dashboard.py  data.py  day_loop.py  display.py  engine.py  fills.py  historical.py  lab.py  metrics.py  models.py  pine.py  pine_runner.py  portfolio.py  rolling.py  slippage.py  strategies.py  tearsheet.py  vbt_sweep.py  vivek_equity.py
screener/backtester/optimization/: __init__.py  cli.py  grid.py  metrics.py  monte_carlo.py  reporting.py  walk_forward.py
screener/commands/: __init__.py  cache.py  conviction.py  garp.py  index_inclusion.py  insiders.py  institutional.py  live_strategies.py  qc_batch.py  rs_breakout.py  screen.py  screen_report.py  seasonality.py
screener/criteria/: __init__.py
screener/criteria/plugins/: __init__.py  breakout.py  cheap_quality.py  dividend.py  ema.py  ema20_50_cross.py  ema_breakout.py  garp.py  (+13 more)
screener/earnings_backtest/: __init__.py  cli.py  data.py  engine.py  pead.py  strategies.py
screener/indicators/: __init__.py  numpy.py  registry.py
screener/operator/: __init__.py  cli.py  fetch.py  output.py  process.py  screen.py  universe.py
screener/providers/: __init__.py  fmp.py  fmp_fundamentals.py  fmp_screener.py
screener/research/: __init__.py
screener/strategies/: __init__.py  base.py  expressions.py  registry.py  spec.py  trades.py
screener/unusual_volume/: __init__.py  buildup.py  classify.py  cli.py  delivery.py  detector.py  enrich.py  fii_dii.py  filters.py  nse_client.py  option_chain.py  output.py  service.py
scripts/: backtest_red_day_short_puts.py  scan_india_multi.py  scan_morning_star_us.py
tests/: conftest.py  test_cache.py  test_cache_cli.py  test_cli.py  test_conviction.py  test_cov_bt_core.py  test_cov_bt_misc.py  test_cov_earnings_data.py  test_cov_earnings_engine.py  test_cov_garp_rs.py  test_cov_insiders.py  test_cov_live_display.py  test_cov_misc_core.py  test_cov_operator.py  test_cov_optimization.py  test_cov_pine_runner.py  test_cov_plugins.py  test_cov_uv_buildup.py  test_cov_uv_service.py  test_cov_vbt_sweep.py  test_dashboard.py  test_day_loop.py  test_display_history_enrich.py  test_earnings_backtest_engine.py  test_earnings_backtest_strategies.py  test_earnings_pead.py  test_earnings_pit.py  test_ema20_50_cross.py  test_engine.py  test_fills.py  test_fmp_client.py  test_fmp_fetcher.py  test_fmp_fundamentals.py  test_fmp_insiders.py  test_fmp_screener.py  test_format.py  test_garp.py  test_grid_disclaimer.py  test_index_inclusion.py  test_indicator_parity.py  (+28 more)
tests/correctness/: FINDINGS.md  conftest.py  reference_adapters.py  test_corporate_actions.py  test_cross_engine_reconciliation.py  test_data_layer.py  test_data_layer_live.py  test_hand_computed_trades.py  test_indicators_edge_cases.py  test_indicators_golden.py  test_indicators_vs_reference.py  test_lookahead_blindness.py  test_metrics_edge_cases.py  test_metrics_golden.py  test_metrics_vs_empyrical.py  test_reference_witnesses.py  test_scoring.py  test_universes_pit.py
tests/fixtures/: vbt_sweep_aapl_msft_nvda.csv
tests/strategies/: test_new_strategies.py
(+135 files in other folders)
