[project]
name = "screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tradingview-screener>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "openscreener",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=15.0",
    "jugaad-data>=0.33.1",
    "requests>=2.31",
]

[project.scripts]
screener = "main:cli"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "pytest>=8.0",
    "types-requests>=2.31",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["main.py", "run_pinescript_strategies.py", "screener"]
exclude = ["tests"]
disable_error_code = [
    "arg-type",
    "attr-defined",
    "call-overload",
    "index",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "operator",
    "return-value",
    "type-arg",
    "union-attr",
    "var-annotated",
]

[[tool.mypy.overrides]]
module = [
    "jugaad_data.*",
    "openscreener.*",
    "tradingview_screener.*",
    "yfinance.*",
]
ignore_missing_imports = true
