[project]
name = "screener"
version = "0.1.0"
description = "A Python CLI for screening, ranking, and backtesting US and Indian equities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tradingview-screener>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "openscreener",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "plotly>=5.24",
    "numpy>=1.24",
    "pyarrow>=15.0",
    "jugaad-data>=0.33.1",
    "requests>=2.31",
    "structlog>=24.1",
    "PyYAML>=6.0",
    "libsql-client>=0.3.1",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
vectorbt = [
    "vectorbt[rust]>=1.0,<2",
]

[project.scripts]
screener = "screener.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "empyrical-reloaded>=0.5.12",
    "matplotlib>=3.10.8",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "pandas-ta-classic>=0.6.20",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-requests>=2.31",
]

[tool.pytest.ini_options]
markers = [
    "network: requires live internet access (opt in with SCREENER_LIVE_TESTS=1)",
    "requires_talib: requires the optional TA-Lib C library + python wrapper",
    "requires_quantstats: requires the optional quantstats package",
]

[tool.coverage.run]
source = ["screener"]
branch = false

[tool.coverage.report]
show_missing = true
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "pass  # pragma: no cover",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"run_pinescript_strategies.py" = ["E402"]
"screener/backtester/pine_runner.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["main.py", "run_pinescript_strategies.py", "screener"]
exclude = ["tests"]
disable_error_code = [
    "call-overload",
    "index",
    "no-untyped-call",
    "no-untyped-def",
    "operator",
    "type-arg",
]

[[tool.mypy.overrides]]
module = [
    "jugaad_data.*",
    "openscreener.*",
    "plotly.*",
    "tradingview_screener.*",
    "vectorbt.*",
    "yfinance.*",
]
ignore_missing_imports = true

# tradingview_screener ships py.typed but does not re-export Query/col from its
# package __init__, so attr-defined flags every `from tradingview_screener import
# col, Query`. The names are part of the documented public API; allow the
# implicit re-export rather than ignoring each import site.
[[tool.mypy.overrides]]
module = ["tradingview_screener"]
implicit_reexport = true
