[package]
name = "screener-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
urlencoding = "2.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
approx = "0.5"
